# fpr

./: CMakeLists.txt  README
cmake/: GitUtils.cmake
include/fixproprep/: cliquecover.h  cliquetable.h  dfs.h  heurmgr.h  impltable.h  index_queue.h  index_set.h  linear_propagator.h  lit.h  mip.h  propagation.h  repair.h  strategies.h  table_propagators.h  thread_pool.h  vectorlist.h  version.h.in  worker.h
src/: cliquecover.cpp  cliquetable.cpp  heurmgr.cpp  impltable.cpp  linear_propagator.cpp  main.cpp  mip.cpp  propagation.cpp  repair.cpp  solchecker.cpp  table_propagators.cpp  trial_main.cpp  vectorlist.cpp
